Add a few commands, fix spawning. And some generic fixes!